# minimal-desktop-clipboard

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: clipboard.cc.896DC01C37C3FC33.idx  clipboardX11-demo.cc.855A8826A42CF543.idx  clipboardX11.cc.DF32F0BDC5276649.idx  test.cpp.499A7592C170A9A9.idx
include/: clipboard.hh
src/: clipboard.cc  clipboardX11.cc
tests/: test.cpp
